footer icon distortion fixed

--- a/style.css
+++ b/style.css
@@ -284,7 +284,6 @@ footer {
 .icons ul {
     padding: 0;
     overflow-x: visible;
-    /* margin: 0 auto; */
 }
 
 footer ul li {
@@ -570,13 +569,13 @@ footer ul li a {
         font-size: 0.7em;
     }
     .fb {
-        padding: 0em 0.2em 1em 0.3em;
+        padding: 0em 0.2em 0em 0.3em;
     }
     .tw {
-        padding: 0em 0em 1em 0.1em;
+        padding: 0em 0em 0em 0.1em;
     }
     .ig {
-        padding: 0em 0.3em 1em 0.2em;
+        padding: 0em 0.3em 0em 0.2em;
     }
     footer ul li:hover {
         color: hsl(238, 22%, 44%);
